--- a/index.html
+++ b/index.html
@@ -8,10 +8,34 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Tip Calculater</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div id="container">
+      
+     <div id="bill">Much was the bill? <input type="text"  placeholder="enter Total Amount"> </div>
+      <br>
+    
+      <div id="service"> How was the service?
+      <select class="form-control">
+        <option class="amazing">AMAZING (20%)</option>
+        <option class="fair">FAIR (15%)</option>
+        <option class="poor">POOR (10%)</option>
+      </select ></div>
 
+     <div id="split">How many are sharing the bill? <input type="text"  placeholder="# of Guest"></divid="split">
+
+     <div id="Submit"><button>Submit</button></div>
+
+     <div id="result"></div>
+
+    </div>
+
+    <!-- Optional JavaScript -->
+    <script src="code.js"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
